a very little improvement in ComplexMatrix